# yt-dlp-ng

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_PLAN.md  README.md  full_log.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/core/: downloader.rs  extractor.rs  metadata.rs  mod.rs
src/extractors/: js_interpreter.rs  mod.rs  youtube.rs  youtube_signature.rs
src/utils/: mod.rs
tests/: integration_tests.rs
