[package]
name = "yt-dlp-ng"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Modern implementation of yt-dlp with performance improvements"
repository = "https://github.com/buggerman/yt-dlp-ng"
license = "MIT"
keywords = ["video", "downloader", "youtube", "media"]
categories = ["command-line-utilities", "multimedia"]

[[bin]]
name = "yt-dlp-ng"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "cookies"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
url = "2.4"
regex = "1.10"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"