[package]
name = "yt-dlp-ng"
version = "0.1.0"
edition = "2021"
authors = ["buggerman"]
description = "Modern, high-performance implementation of yt-dlp built with Rust"
repository = "https://github.com/buggerman/yt-dlp-ng"
homepage = "https://github.com/buggerman/yt-dlp-ng"
documentation = "https://docs.rs/yt-dlp-ng"
license = "MIT"
readme = "README.md"
keywords = ["video", "downloader", "youtube", "media", "rust"]
categories = ["command-line-utilities", "multimedia"]
exclude = ["target/", ".github/", "tests/"]

[[bin]]
name = "yt-dlp-ng"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
url = "2.4"
regex = "1.10"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
urlencoding = "2.1"
rquickjs = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"